# anki-custom-card

./: .dockerignore  .env.example  .gitignore  .mise.toml  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
docker/: entrypoint.sh
docs/: architecture.md  implementation.md  operations.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.test.ts  api.ts  main.ts  polling.test.ts  polling.ts  preview.test.ts  preview.ts  router.ts  style.css  types.ts
frontend/src/views/: DraftView.test.ts  DraftView.vue  HomeView.test.ts  HomeView.vue  NoteView.vue  PreviewView.vue  WordView.vue
migrations/: env.py
migrations/versions/: 3fed32f2a46b_add_media_and_persistent_jobs.py  4010dfc6503c_initial_domain_schema.py  61df1b1bdad7_add_anki_publications.py  a8f4e0c9132b_add_generation_request_key.py  c2c932fd1820_add_dictionary_cache_foundation.py  d033c4ab7251_add_generation_provider_trace.py  dfd8206eedfc_add_speech_cache_and_draft_confirmation.py
src/anki_custom_card/: __init__.py  app.py  config.py  deletion.py  services.py
src/anki_custom_card/api/: health.py  v1.py
tests/integration/: test_application_worker.py  test_dictionary_cache_repository.py  test_job_repository.py  test_media_repository.py  test_migrations.py  test_note_deletion.py  test_note_repository.py
tests/smoke/: test_real_anki_connect.py  test_real_azure_speech.py  test_real_openai_generation.py
tests/unit/: test_database.py  test_health.py  test_media_store.py  test_settings.py  test_word_normalization.py
(+49 files in other folders)
