[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anki-custom-card"
version = "0.1.0"
description = "Local AI-assisted Anki note authoring service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.18.5",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "openai>=2.0,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx2>=2.7.0",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anki_custom_card"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "unit: isolated unit tests",
  "integration: tests that cross process or service boundaries",
  "smoke: opt-in tests that call real paid external services",
]

[tool.coverage.run]
branch = true
source = ["anki_custom_card"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
